<!--
  ~ This Original Work is copyright of 51 Degrees Mobile Experts Limited.
  ~ Copyright 2022 51 Degrees Mobile Experts Limited, Davidson House,
  ~ Forbury Square, Reading, Berkshire, United Kingdom RG1 3EU.
  ~
  ~ This Original Work is licensed under the European Union Public Licence
  ~  (EUPL) v.1.2 and is subject to its terms as set out below.
  ~
  ~  If a copy of the EUPL was not distributed with this file, You can obtain
  ~  one at https://opensource.org/licenses/EUPL-1.2.
  ~
  ~  The 'Compatible Licences' set out in the Appendix to the EUPL (as may be
  ~  amended by the European Commission) shall be deemed incompatible for
  ~  the purposes of the Work and the provisions of the compatibility
  ~  clause in Article 5 of the EUPL shall not apply.
  ~
  ~   If using the Work as, or as part of, a network application, by
  ~   including the attribution notice(s) required under Article 5 of the EUPL
  ~   in the end user terms of the application under an appropriate heading,
  ~   such notice(s) shall fulfill the requirements of that article.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>com.51degrees</groupId>
    <artifactId>pipeline.geo-location</artifactId>
    <version>4.4.8-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>51Degrees :: Pipeline :: Geo Location</name>
    <url>https://51degrees.com</url>
    <description>Geo location engines for the 51Degrees Pipeline API</description>

    <organization>
        <name>51Degrees</name>
        <url>51degrees.com</url>
    </organization>
    <developers>
        <developer>
            <name>51Degrees Engineering</name>
            <email>engineering@51degrees.com</email>
        </developer>
    </developers>

    <modules>
        <module>geo-location.core</module>
        <module>geo-location.cloud</module>
        <module>geo-location</module>
        <module>geo-location.shell.examples</module>
        <module>geo-location.web.examples</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <maven.compiler.target>1.8</maven.compiler.target>
        <maven.compiler.source>1.8</maven.compiler.source>

        <pipeline.version>4.4.6</pipeline.version>
        <devicedetection.version>4.4.8</devicedetection.version>

        <junit.version>4.13.2</junit.version>
        <slf4j-api.version>1.7.36</slf4j-api.version>
        <logback-classic.version>1.3.14</logback-classic.version>
        <mockito-core.version>4.3.1</mockito-core.version>
        <org.json.version>20211205</org.json.version>

        <maven-compiler-plugin.version>3.9.0</maven-compiler-plugin.version>
        <exec-maven-plugin.version>1.6.0</exec-maven-plugin.version>
        <nexus-staging-maven-plugin.version>1.6.13</nexus-staging-maven-plugin.version>
        <maven-install-plugin.version>2.5.2</maven-install-plugin.version>
        <maven-jar-plugin.version>3.2.2</maven-jar-plugin.version>
        <maven-source-plugin.version>3.2.1</maven-source-plugin.version>
        <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
        <maven-javadoc-plugin.version>3.3.2</maven-javadoc-plugin.version>
        <maven-jarsigner-plugin.version>3.0.0</maven-jarsigner-plugin.version>
        <maven-gpg-plugin.version>3.0.1</maven-gpg-plugin.version>

        <ossrh.baseurl>https://oss.sonatype.org</ossrh.baseurl>
        <snapshot-repository.id>ossrh</snapshot-repository.id>
        <snapshot-repository.url>${ossrh.baseurl}/content/repositories/snapshots/</snapshot-repository.url>
        <publishrepository.id>ossrh</publishrepository.id>
        <publishrepository.url>${ossrh.baseurl}/service/local/staging/deploy/maven2/</publishrepository.url>
        <fetchrepository.id>central</fetchrepository.id>
        <fetchrepository.url>https://repo1.maven.org/maven2</fetchrepository.url>

        <skippackagesign>true</skippackagesign>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- compile dependencies -->

            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j-api.version}</version>
            </dependency>

            <!-- test dependencies -->
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>${mockito-core.version}</version>
                <scope>test</scope>
            </dependency>

            <!-- runtime dependencies -->

            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-classic</artifactId>
                <version>${logback-classic.version}</version>
                <scope>runtime</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- Examples and tests need an implementation of SLF4J at runtime -->
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
        </dependency>
    </dependencies>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin.version}</version>
                    <configuration>
                        <source>${maven.compiler.source}</source>
                        <target>${maven.compiler.target}</target>
                        <showWarnings>true</showWarnings>
                        <compilerArgs>
                            <arg>-Xlint:all,-try,-options</arg>
<!--                            <arg>-Werror</arg>-->
                        </compilerArgs>
                    </configuration>
                </plugin>
                <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-install-plugin</artifactId>
                <version>${maven-install-plugin.version}</version>
                <executions>
                    <execution>
                        <id>default-install</id>
                        <configuration>
                            <skip>${deployOnly}</skip>
                        </configuration>
                    </execution>
                    <execution>
                        <id>default-test</id>
                        <configuration>
                            <skip>${deployOnly}</skip>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
         <plugin>
                <groupId>org.sonatype.plugins</groupId>
                <artifactId>nexus-staging-maven-plugin</artifactId>
                <version>1.6.13</version>
                <extensions>true</extensions>
                <configuration>
                    <serverId>${publishrepository.id}</serverId>
                    <nexusUrl>${ossrh.baseurl}</nexusUrl>
                    <altStagingDirectory>${user.home}/.m2</altStagingDirectory>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
                <configuration>
                    <systemPropertyVariables>
                        <!-- this tells all tests run via surefire to pick their logback config up from the root -->
                        <!-- fwiw does not affect those run via main() which need to find their config by other means -->
                        <!--suppress UnresolvedMavenProperty -->
                        <logback.configurationFile>${maven.multiModuleProjectDirectory}/logback.xml</logback.configurationFile>
                        <!-- this sets the scope of file search (inter alia in Utils.getFilePath) to the project directory-->
                        <!--suppress UnresolvedMavenProperty -->
                        <project.root>${maven.multiModuleProjectDirectory}</project.root>
                        <!-- these are defined in  settings.xml -->
                        <SuperResourceKey>${SuperResourceKey}</SuperResourceKey>
                        <AcceptChNoneKey>${AcceptChNoneKey}</AcceptChNoneKey>
                        <AcceptChPlatformKey>${AcceptChPlatformKey}</AcceptChPlatformKey>
                        <AcceptChBrowserKey>${AcceptChBrowserKey}</AcceptChBrowserKey>
                        <AcceptChHardwareKey>${AcceptChHardwareKey}</AcceptChHardwareKey>
                    </systemPropertyVariables>
                    <properties>
                        <property>
                            <name>listener</name>
                            <value>fiftyone.geolocation.core.test.MavenRunListener</value>
                        </property>
                    </properties>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>${maven-jar-plugin.version}</version>
                <configuration>
                    <archive>
                        <manifest>
                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>${maven-source-plugin.version}</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>${maven-javadoc-plugin.version}</version>
                <configuration>
                    <doclint>none</doclint>
                    <quiet>true</quiet>
                    <detectJavaApiLink>false</detectJavaApiLink>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jarsigner-plugin</artifactId>
                <version>${maven-jarsigner-plugin.version}</version>
                <executions>
                <execution>
                    <id>sign</id>
                    <goals>
                    <goal>sign</goal>
                    </goals>
                </execution>
                </executions>
                <configuration>
                    <skip>${skippackagesign}</skip>
                    <keystore>NONE</keystore>
                    <storetype>AZUREKEYVAULT</storetype>
                    <alias>${keyvaultCertName}</alias>
                    <storepass>${keyvaultAccessToken}</storepass>
                    <providerClass>net.jsign.jca.JsignJcaProvider</providerClass>
                    <providerArg>${keyvaultVaultName}</providerArg>
                    <tsa>http://timestamp.globalsign.com/tsa/r6advanced1</tsa>
                    <certchain>${keyvaultCertChain}</certchain>
                    <arguments>
                        <argument>-J-cp</argument>
                        <argument>-J${keyvaultJcaJar}</argument>
                        <argument>-J--add-modules</argument>
                        <argument>-Jjava.sql</argument>
                    </arguments>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>${maven-gpg-plugin.version}</version>
                <configuration>
                    <skip>${skippackagesign}</skip>
                    <gpgArguments>
                        <arg>--pinentry-mode</arg>
                        <arg>loopback</arg>
                    </gpgArguments>                    
                </configuration>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <distributionManagement>
        <repository>
            <id>${publishrepository.id}</id>
            <url>${publishrepository.url}</url>
        </repository>
        <snapshotRepository>
            <id>${snapshot-repository.id}</id>
            <url>${snapshot-repository.url}</url>
        </snapshotRepository>
    </distributionManagement>

    <repositories>
        <repository>
            <id>${fetchrepository.id}</id>
            <url>${fetchrepository.url}</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>${snapshot-repository.id}</id>
            <url>${snapshot-repository.url}</url>
            <releases>
                <enabled>false</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>

    <licenses>
        <license>
            <name>European Union Public License 1.2</name>
            <url>https://opensource.org/licenses/EUPL-1.2</url>
        </license>
    </licenses>
    <scm>
        <url>https://github.com/51Degrees/location-java</url>
        <connection>scm:git:git://github.com/51Degrees/location-java.git</connection>
        <developerConnection>scm:git:info@51degrees.com:51Degrees/location-java.git</developerConnection>
    </scm>
</project>
